--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
+    const firebaseConfig = {nnnnn
       apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
       authDomain: "fichazona.firebaseapp.com",
       projectId: "fichazona",
